# fcbf

./: .flake8  CHANGELOG.md  CITATION.bib  DESCRIPTION.md  LICENSE  README.md  pyproject.toml
fcbf/: __init__.py  fcbf.py
fcbf/data/: __init__.py  datasets.py
test/: test_fcbf.py
