[tool.poetry]
name = "fcbf"
version = "0.1.0"
description = "Categorical feature selection based on information theoretical considerations"
readme = "DESCRIPTION.md"
authors = ["Martin Trat <martin.trat@gmail.com>"]
homepage = "https://github.com/m-martin-j/fcbf"
repository = "https://github.com/m-martin-j/fcbf"
license = "MIT"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha"
]

[tool.poetry.dependencies]
python = "^3.7"
scipy = "*"
numpy = "*"
pandas = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
