[tool.poetry]
name = "fcbf"
version = "0.1.2"
description = "Categorical feature selection based on information theoretical considerations"
readme = "DESCRIPTION.md"
authors = ["Martin Trat <martin.trat@gmail.com>"]
homepage = "https://github.com/m-martin-j/fcbf"
repository = "https://github.com/m-martin-j/fcbf"
license = "MIT"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha"
]

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.13.0"
numpy = "^1.26.4"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
